fix. index slide bug on ie

--- a/css/merged.css
+++ b/css/merged.css
@@ -366,7 +366,7 @@ header .intro-text .intro-heading {
   font-family: 'Nanum', 'Apple Gothic', 'Malgun Gothic', 'Nanum Gothic', 'Dotum', Arial, sans-serif;
   text-transform: uppercase;
   font-weight: 700;
-  font-size: 2.5vw;
+  font-size: 2.4vw;
   line-height: 4.0vw;
   width: 90%;
 }
