--- a/less/common.less
+++ b/less/common.less
@@ -307,7 +307,7 @@ header {
             .body-custom;
             text-transform: uppercase;
             font-weight: 700;
-            font-size: 2.5vw;
+            font-size: 2.4vw;
             line-height: 4.0vw;
             width: 90%;
             a {
